--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.15.3",
     "nuxt": "^1.0.0-rc3",
     "source-map-support": "^0.4.15",
+    "vuebar": "0.0.18",
     "vuex": "^3.0.1",
     "whatwg-fetch": "^2.0.3"
   },
