--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "express": "^4.15.3",
     "nuxt": "^1.0.0-rc3",
     "source-map-support": "^0.4.15",
+    "vue-carousel": "^0.6.9",
     "vuebar": "0.0.18",
     "vuex": "^3.0.1",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
+    "@nuxtjs/localtunnel": "^1.0.1",
     "babel-eslint": "^7.2.3",
     "backpack-core": "^0.4.1",
     "eslint": "^4.3.0",
